--- a/p1/report/report.tex
+++ b/p1/report/report.tex
@@ -55,14 +55,17 @@ This report focuses on investigating the impact of two critical hyperparameters:
 \section{Methodology}
 
 \subsection{Algorithm}
+
+Proximal Policy Optimization (PPO) is a highly effective reinforcement learning algorithm belonging to the policy gradient family. Its primary goal is to learn a policy that maximizes expected cumulative reward by iteratively updating the policy's parameters. Unlike simpler policy gradient methods that can suffer from destructively large updates, PPO ensures more stable and reliable training by constraining the change in the policy at each step. It achieves this by optimizing a "clipped" surrogate objective function. This objective limits how much the new policy can diverge from the old policy in a single update, effectively keeping the updates within a trusted region. PPO alternates between collecting batches of experience data (state-action-reward sequences) using the current policy and performing several epochs of stochastic gradient ascent to optimize the surrogate objective using that data, often employing an advantage function to estimate the relative value of actions. This mechanism helps balance exploration and exploitation while maintaining stable learning progress, making PPO a popular choice for a wide range of continuous and discrete control tasks.
+
 The Proximal Policy Optimization (PPO) algorithm was selected due to its balance between sample efficiency and stability. It is a widely-used, state-of-the-art algorithm suitable for various reinforcement learning tasks. Our implementation closely follows the details outlined in the work by Huang et al. \cite{shengyi2022the37implementation}.
 
 \subsubsection{General PPO Algorithm Details}
 The following general PPO implementation details were adopted:
 \begin{itemize}
     \item \textbf{Weight Initialization:} Orthogonal initialization for weights and constant initialization for biases were used.
-    \item \textbf{Adam Optimizer Epsilon:} The epsilon parameter of the Adam optimizer was set to \(1 \times 10^{-5}\) (Code reference: \texttt{ppo2/model.py\#L100}).
-    \item \textbf{Adam Learning Rate Annealing:} The learning rate for the Adam optimizer was linearly decayed from \(3 \times 10^{-4}\) to 0 over the course of training, following common practice for MuJoCo environments (Code reference: \texttt{ppo2/ppo2.py\#L133-L135}).
+    \item \textbf{Adam Optimizer Epsilon:} The epsilon parameter of the Adam optimizer was set to \(1 \times 10^{-5}\).
+    \item \textbf{Adam Learning Rate Annealing:} The learning rate for the Adam optimizer was linearly decayed from \(3 \times 10^{-4}\) to 0 over the course of training, following common practice for MuJoCo environments.
     \item \textbf{Generalized Advantage Estimation (GAE):} GAE was employed for estimating advantage values.
     \item \textbf{Advantage Normalization:} Calculated advantages were normalized at the minibatch level by subtracting the mean and dividing by the standard deviation.
     \item \textbf{Global Gradient Clipping:} The gradients of the policy and value networks were rescaled during each update iteration to ensure the global L2 norm did not exceed 0.5. This technique has been shown to offer potential performance benefits \cite{andrychowicz2021what}.
