fix latex compilation

--- a/paper-review/references.bib
+++ b/paper-review/references.bib
@@ -55,7 +55,7 @@
 @article{Kveton2024ActiveDPO,
   title={Active Learning for Direct Preference Optimization},
   author={Kveton, Branislav and Li, Xintong and McAuley, Julian and Rossi, Ryan and Shang, Jingbo and Wu, Junda and Yu, Tong},
-  journal={arXiv preprint arXiv:2403.01076}, % Corrected arXiv ID from [8]
+  journal={arXiv preprint arXiv:2403.01076},
   year={2024},
   archivePrefix={arXiv},
   eprint={2403.01076}
@@ -64,7 +64,7 @@
 @article{Fu2024RewardShaping,
   title={Reward Shaping to Mitigate Reward Hacking in RLHF},
   author={Fu, Jiayi and Zhao, Xuandong and Yao, Chengyuan and Wang, Heng and Han, Qi and Xiao, Yanghua},
-  journal={arXiv preprint arXiv:2402.18770}, % Corrected arXiv ID from [7]
+  journal={arXiv preprint arXiv:2402.18770},
   year={2024},
   archivePrefix={arXiv},
   eprint={2402.18770}
@@ -73,7 +73,7 @@
 @article{Zhang2024EnergyLoss,
   title={The Energy Loss Phenomenon in RLHF: A New Perspective on Mitigating Reward Hacking},
   author={Zhang, Han and Liu, Ruixuan and Miao, Ruosen and Zhang, Zhaofei and Zhang, Weinan and Yu, Yong and Wang, Shuai},
-  journal={arXiv preprint arXiv:2401.12358}, % Corrected arXiv ID from [6] (was 2501.19358)
+  journal={arXiv preprint arXiv:2401.12358},
   year={2024},
   archivePrefix={arXiv},
   eprint={2401.12358}
@@ -82,16 +82,16 @@
 @article{Tang2024AsyncRLHF,
    title={Asynchronous RLHF: Faster and More Efficient Off-Policy RL for Language Models},
    author={Tang, Bill and Li, Ziyan and Liu, Bang and Liu, Jerry and Liu, Sijia and Liu, Zhiyuan and Rajani, Nazneen and Wang, Zhuoran and Yu, Hong},
-   journal={arXiv preprint arXiv:2402.18252}, % Corrected arXiv ID from [14] (was 2410.18252)
+   journal={arXiv preprint arXiv:2402.18252},
    year={2024},
    archivePrefix={arXiv},
    eprint={2402.18252}
 }
 
 @article{Lian2024AligningToWhat,
-   title={Aligning to What? On the (In)Effectiveness of RLHF in Mitigating Covert Biases}, % Adjusted title for clarity based on [13]
+   title={Aligning to What? On the (In)Effectiveness of RLHF in Mitigating Covert Biases},
    author={Lian, Eric and Budhathoki, Sauhard and Head, Andrew and Sasha, Dennis},
-   journal={arXiv preprint arXiv:2403.09025}, % Corrected arXiv ID from [13] (was 2503.09025)
+   journal={arXiv preprint arXiv:2403.09025},
    year={2024},
    archivePrefix={arXiv},
    eprint={2403.09025}
@@ -100,13 +100,13 @@
 @article{Liu2024RobustRLHF,
    title={Robust Reinforcement Learning from Human Feedback for Large Language Models Fine-Tuning},
    author={Liu, Yang and Li, Zihan and Wang, Chengyu and Wang, Jun and Huang, He and Liu, Xiaofeng and Wang, Xu},
-   journal={arXiv preprint arXiv:2404.03784}, % Corrected arXiv ID from [15] (was 2504.03784)
+   journal={arXiv preprint arXiv:2404.03784},
    year={2024},
    archivePrefix={arXiv},
    eprint={2404.03784}
 }
 
-@article{Xu2023EvolInstruct, % Changed from Wang2022EvolInstruct to Xu2023EvolInstruct based on [5]
+@article{Xu2023EvolInstruct,
   title={WizardLM: Empowering Large Language Models to Follow Complex Instructions},
   author={Xu, Can and Sun, Qingfeng and Zheng, Kai and Geng, Xiubo and Zhao, Pu and Feng, Jiazhan and Tao, Chongyang and Jiang, Daxin},
   journal={arXiv preprint arXiv:2304.12244},
@@ -120,7 +120,7 @@
   title = {Training Language Models To Follow Instructions (InstructGPT)},
   year = {2023},
   month = {September},
-  howpublished = {\url{[https://www.oxen.ai/blog/training-language-models-to-follow-instructions-instructgpt](https://www.oxen.ai/blog/training-language-models-to-follow-instructions-instructgpt)}},
+  howpublished = {\url{https://www.oxen.ai/blog/training-language-models-to-follow-instructions-instructgpt}},
   note = {Accessed: July 22, 2024}
 }
 
@@ -128,7 +128,7 @@
   author = {{Wikipedia contributors}},
   title = {Reinforcement learning from human feedback --- {Wikipedia}{,} The Free Encyclopedia},
   year = {2024},
-  howpublished = {\url{[https://en.wikipedia.org/wiki/Reinforcement_learning_from_human_feedback](https://en.wikipedia.org/wiki/Reinforcement_learning_from_human_feedback)}},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Reinforcement_learning_from_human_feedback}},
   note = {Accessed: July 22, 2024}
 }
 
@@ -136,7 +136,7 @@
   author = {{Amazon Web Services}},
   title = {What is Reinforcement Learning from Human Feedback (RLHF)?},
   year = {2024},
-  howpublished = {\url{[https://aws.amazon.com/what-is/reinforcement-learning-from-human-feedback/](https://aws.amazon.com/what-is/reinforcement-learning-from-human-feedback/)}},
+  howpublished = {\url{https://aws.amazon.com/what-is/reinforcement-learning-from-human-feedback/}},
   note = {Accessed: July 22, 2024}
 }
 
@@ -144,7 +144,7 @@
    author = {{Montreal AI Ethics Institute}},
    title = {Open Problems and Fundamental Limitations of Reinforcement Learning from Human Feedback},
    year = {2023},
-   howpublished = {\url{[https://montrealethics.ai/open-problems-and-fundamental-limitations-of-reinforcement-learning-from-human-feedback/](https://montrealethics.ai/open-problems-and-fundamental-limitations-of-reinforcement-learning-from-human-feedback/)}},
+   howpublished = {\url{https://montrealethics.ai/open-problems-and-fundamental-limitations-of-reinforcement-learning-from-human-feedback/}},
    note = {Accessed: July 22, 2024}
 }
 
@@ -152,6 +152,6 @@
    author = {{Learning \& Adaptive Systems Group, ETH Zurich}},
    title = {Reward hacking in RLHF - Causal Misidentification},
    year = {2024},
-   howpublished = {\url{[https://las.inf.ethz.ch/wp-content/uploads/2024/10/rlhf-reward-hacking-proposal.pdf](https://las.inf.ethz.ch/wp-content/uploads/2024/10/rlhf-reward-hacking-proposal.pdf)}}, % URL from snippet
+   howpublished = {\url{https://las.inf.ethz.ch/wp-content/uploads/2024/10/rlhf-reward-hacking-proposal.pdf}},
    note = {Accessed: July 22, 2024}
 }
